--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
 <h1 class="heading">Churn Prediction APP</h1>
 <div class="white" id="check">
       <div id="input" class="inp">
-        <form action="http://localhost:5000/" method="POST" id="fomm">
+        <form action="/predict" method="POST" id="fomm">
           <div class="row">
           <div class="col-md-4">
             <label class="label-name">seniour cittizenn
